--- a/core/static/core/css/main.css
+++ b/core/static/core/css/main.css
@@ -99,7 +99,7 @@ dialog,
 }
 
 .dialog-backdrop {
-  @apply fixed inset-0 items-center justify-center bg-black bg-opacity-25 flex;
+  @apply fixed inset-0 flex items-center justify-center bg-black bg-opacity-25;
 }
 
 dialog header,
