--- a/core/templates/core/turmaprofessores.html
+++ b/core/templates/core/turmaprofessores.html
@@ -14,6 +14,9 @@
     Turma
   </h1>
 
+
+  <!--Inicio Menu Filtros -->
+
   <div class="flex w-[100%] justify-center">
     <div
       class="mt-2 flex w-full flex-col items-center justify-center md:flex-row"
@@ -60,31 +63,36 @@
     </div>
   </div>
 
+  <!--Fim do Menu Filtros-->
+
+  <!--Inicio Tabs-->
+
   <div class=" mt-6" x-data="{ selected: 'option-1' }">
     <nav class="">
       <ul class="flex justify-center">
+        <!-- Option Notas -->
         <li class="px-4 py-2 flex items-center" :class="{ 'border-b-2 border-color-primary': selected === 'option-1' }">
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="w-6 h-6 text-color-primary" @click="selected = 'option-1'">
             <path stroke-linecap="round" stroke-linejoin="round" d="M10.5 6a7.5 7.5 0 107.5 7.5h-7.5V6z" />
             <path stroke-linecap="round" stroke-linejoin="round" d="M13.5 10.5H21A7.5 7.5 0 0013.5 3v7.5z" />
           </svg>
-          <a href="#option-1" @click="selected = 'option-1'" class="hidden text-color-primary md:block">Nota</a>
+          <a href="#option-1" @click="selected = 'option-1'" class="hidden text-color-primary md:block">Notas</a>
         </li>
-      
+        <!-- Option Provas -->
         <li class="px-4 py-2 flex items-center" :class="{ 'border-b-2 border-color-primary': selected === 'option-2' }">
           <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 text-color-primary" @click="selected = 'option-2'">
             <path stroke-linecap="round" stroke-linejoin="round" d="M20.25 14.15v4.25c0 1.094-.787 2.036-1.872 2.18-2.087.277-4.216.42-6.378.42s-4.291-.143-6.378-.42c-1.085-.144-1.872-1.086-1.872-2.18v-4.25m16.5 0a2.18 2.18 0 00.75-1.661V8.706c0-1.081-.768-2.015-1.837-2.175a48.114 48.114 0 00-3.413-.387m4.5 8.006c-.194.165-.42.295-.673.38A23.978 23.978 0 0112 15.75c-2.648 0-5.195-.429-7.577-1.22a2.016 2.016 0 01-.673-.38m0 0A2.18 2.18 0 013 12.489V8.706c0-1.081.768-2.015 1.837-2.175a48.111 48.111 0 013.413-.387m7.5 0V5.25A2.25 2.25 0 0013.5 3h-3a2.25 2.25 0 00-2.25 2.25v.894m7.5 0a48.667 48.667 0 00-7.5 0M12 12.75h.008v.008H12v-.008z" />
           </svg>          
           <a href="#option-2" @click="selected = 'option-2'" class="hidden text-color-primary md:block">Prova | Atividade</a>
         </li>
-
+        <!-- Option Reposições -->
         <li class="px-4 py-2 flex items-center" :class="{ 'border-b-2 border-color-primary': selected === 'option-3' }">
           <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 text-color-primary" @click="selected = 'option-3'">
             <path stroke-linecap="round" stroke-linejoin="round" d="M20.25 6.375c0 2.278-3.694 4.125-8.25 4.125S3.75 8.653 3.75 6.375m16.5 0c0-2.278-3.694-4.125-8.25-4.125S3.75 4.097 3.75 6.375m16.5 0v11.25c0 2.278-3.694 4.125-8.25 4.125s-8.25-1.847-8.25-4.125V6.375m16.5 0v3.75m-16.5-3.75v3.75m16.5 0v3.75C20.25 16.153 16.556 18 12 18s-8.25-1.847-8.25-4.125v-3.75m16.5 0c0 2.278-3.694 4.125-8.25 4.125s-8.25-1.847-8.25-4.125" />
           </svg>          
           <a href="#option-3" @click="selected = 'option-3'" class="hidden text-color-primary md:block">Reposições</a>
         </li>
-
+        <!-- Option Plano de Ensino -->
         <li class="px-4 py-2 flex items-center" :class="{ 'border-b-2 border-color-primary': selected === 'option-4' }">
           <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 text-color-primary" @click="selected = 'option-4'">
             <path stroke-linecap="round" stroke-linejoin="round" d="M4.26 10.147a60.436 60.436 0 00-.491 6.347A48.627 48.627 0 0112 20.904a48.627 48.627 0 018.232-4.41 60.46 60.46 0 00-.491-6.347m-15.482 0a50.57 50.57 0 00-2.658-.813A59.905 59.905 0 0112 3.493a59.902 59.902 0 0110.399 5.84c-.896.248-1.783.52-2.658.814m-15.482 0A50.697 50.697 0 0112 13.489a50.702 50.702 0 017.74-3.342M6.75 15a.75.75 0 100-1.5.75.75 0 000 1.5zm0 0v-3.675A55.378 55.378 0 0112 8.443m-7.007 11.55A5.981 5.981 0 006.75 15.75v-1.5" />
@@ -92,9 +100,10 @@
           <a href="#option-4" @click="selected = 'option-4'" class="hidden text-color-primary md:block">Plano de Ensino</a>
         </li>
       </ul>
-  </nav>
+    </nav>
   
-
+    <!-- Inicio Notas Screen -->
+    
     <div x-show.transition.in.opacity.duration.750ms="selected === 'option-1'" class="p-4">
       <div class="flex flex-row justify-center items-center text-center mt-4 mb-6">
         <span class="mr-2 text-center text-[25px] font-semibold text-color-primary">Bimestre:</span>
@@ -220,9 +229,13 @@
       </div>
     </div>
 
+    <!-- Fim Notas Screen -->
+
+    <!-- Inicio Provas Screen -->
+
     <div x-show.transition.in.opacity.duration.750ms="selected === 'option-2'" class="p-4">
       <div class="flex flex-row w-full justify-between items-center text-center mt-4 mb-6">
-        <select name="Bimestre" class="w-64 h-10 rounded-full text-center">
+        <select name="Bimestre" class="w-64 h-10 rounded-full text-center mr-1 md:mr-0">
           <option>1ºBimestre</option>
           <option>2ºBimestre</option>
           <option>3ºBimestre</option>
@@ -240,10 +253,10 @@
       class="fixed inset-0 items-center justify-center bg-black bg-opacity-25"
     >
       <div
-        class="h-[600px] w-[600px] overflow-y-scroll rounded-3xl bg-slate-400 pb-10"
+        class="h-[90%] w-[90%] rounded-3xl bg-white pb-10 m-4 md:h-[600px] md:w-[600px]"
       >
-        <header class="mx-10 mb-3 mt-8 flex justify-between text-3xl font-bold">
-          <h2>Criar Avaliações</h2>
+        <header class="mx-10 mt-8 flex justify-between text-3xl font-bold">
+          <h2 class="text-color-primary">Marcar Avaliações</h2>
           <div>
             <button
               @click.prevent="createDialog = false"
@@ -266,7 +279,34 @@
             </button>
           </div>
         </header>
-        <section class="flex flex-col gap-3">
+        <section class="flex flex-col gap-3 p-10">
+            <div class="flex flex-col text-lg font-normal">
+              <label>Bimestre:</label>
+              <select name="Bimestre" class="w-64 h-10 rounded-full text-center mb-1">
+                <option>1ºBimestre</option>
+                <option>2ºBimestre</option>
+                <option>3ºBimestre</option>
+                <option>4ºBimestre</option>
+              </select>
+            </div>
+            <div class="flex flex-row">
+            <div class="flex flex-col text-lg w-full font-normal">
+              <label>Peso:</label>
+              <select name="Peso" class="w-36 h-10 rounded-full text-center">
+                <option>M1</option>
+                <option>M2</option>
+                <option>M3</option>
+                <option>M4</option>
+              </select>
+            </div>
+            <div class="flex flex-col text-lg w-full font-normal">
+              <label>Tipo:</label>
+              <select name="Tipo" class="w-36 h-10 rounded-full text-center">
+                <option>Atividade</option>
+                <option>Prova</option>
+              </select>
+            </div>
+          </div>
           <div class="flex flex-col px-12 text-lg font-normal">
             <label>Titulo:</label>
             <input type="text" class="h-10" name="title" required />
@@ -315,13 +355,6 @@
               @input="imageName = $el.files[0].name"
             />
           </div>
-          <div class="flex- "></div>
-            <select name="Bimestre" class="w-64 h-10 rounded-full text-center">
-              <option>1ºBimestre</option>
-              <option>2ºBimestre</option>
-              <option>3ºBimestre</option>
-              <option>4ºBimestre</option>
-            </select>
           <div class="flex h-full flex-col px-12 text-lg font-normal">
             <label class="pb-2">Conteúdo:</label>
             <textarea
@@ -366,6 +399,8 @@
     </div>
   </div>
 
+  <!-- Fim Provas Screen -->
+
     <div x-show.transition.in.opacity.duration.750ms="selected === 'option-3'" class="p-4">
       Reposições
     </div>
@@ -374,6 +409,8 @@
       Plano de Ensino
     </div>
   </div>
+
+  <!-- Fim Tabs -->
 
 </main>
 {% endblock %}
