Fixed announcement images

--- a/communication/templates/communication/announcements.html
+++ b/communication/templates/communication/announcements.html
@@ -99,7 +99,7 @@
     </article>
 
     <section x-show="seeDialog" class="dialog-backdrop">
-      <div class="dialog no_scroll">
+      <div class="dialog no_scroll w-[60%]">
         <header>
           <span></span>
           <button
@@ -122,7 +122,7 @@
             </svg>
           </button>
         </header>
-        <img class="w-full rounded-2xl object-center" :src="imgUrl" />
+        <img class="h-[50vh] w-full block rounded-2xl object-center" :src="imgUrl" />
         <p
           class="text-right text-xs font-normal text-gray-500"
           x-text="date"
